@@ -2,6 +2,9 @@ Version 0.8.10 (2013-09-XX)
 ---------------------------
 Hadoop ETL: bumped to 0.3.5
 Hadoop ETL: added Argonaut 6.0 as a dependency (#342)
+Hadoop ETL: added fromTimestamp to EventEnrichments (#340)
+Hadoop ETL: added makeTsvSafe to ConversionUtils (#338)
+Hadoop ETL: added JsonUtils (#323)
 
 Version 0.8.9 (2013-09-05)
 --------------------------
